syntax = "proto3";

package average;

option java_package = "com.marcusvmleite.grpc.average";
option java_multiple_files = true;

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double result = 1;
}

service AverageService {

    rpc AverageOperation(stream AverageRequest) returns (AverageResponse) {}

}